v1.9.0 (XXXX-XX-XX)
===================

- Add specialized integration method to determine surfaces of sections of orbits and
  add Orbit.SOS and Orbit.plotSOS methods to compute and plot the surface of section
  of an orbit.

- Added a method, dMdE, to calculate the differential energy distribution of
  spherical distribution functions.

- Added general support for DissipativeForce instances in 2D.

- Implemented NonInertialFrameForce in 2D.

- Started using black for code formatting.

- Allow potentials' density and surface density to be plotted on physical axes.

- Don't fail when writing a (fixed) configuration file, instead just warn.

- Switched to using Python 3.11 as the default Python version in the test suite.

v1.8.3 (2023-03-27)
===================

- Fixed issue in Linux wheels where the OpenMP library wasn't properly
  linked to (also fixed the setup.py script for the underlying issue).

v1.8.2 (2023-02-28)
===================

- Added actionAngleVertical to the public API, an actionAngle class for
  1D action-angle calculations. actionAngleVertical was used internally in galpy
  before, but now follows the usual method structure for actionAngle classes.

- Added actionAngleVerticalInverse, an inverse actionAngle class that allows one
  to go from (x,v) -> (J,theta,Omega) for 1D potentials using a custom
  implementation of the torus machinery with point transformations.

- Made it possible to use an interpSphericalPotential as the potential in spherical
  distribution functions (#554)

- Made the potential input explicitly positional-only for all galpy.potential
  functions to avoid errors when specifying it as a keyword argument.

- Rewrite actionAngleAdiabatic's Python implementation as a combination of
  actionAngleSpherical (for the 2D planar part) and actionAngleVertical (for
  the 1D vertical part).

- Dropped Python 3.7 support (to allow required positional-only arguments
  using PEP 570).
