@@ -1,0 +1,4 @@
+galpy.orbit.Orbit.bruteSOS
+==========================
+
+.. automethod:: galpy.orbit.Orbit.bruteSOS
